--- a/_site.yml
+++ b/_site.yml
@@ -1,6 +1,6 @@
 name: "可重製研究操作教學套件"
 output_dir: "docs"
-include: ["base_R_demo.zip"]
+include: ["base_R_demo.zip","Lecture01HW.Rmd"]
 navbar:
   right:
     - text: "首頁"
