update excluded files in _site.yml

--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,8 @@
 name: "可重製研究操作教學套件"
 output_dir: "docs"
 include: ["Lecture01.Rmd","Lecture02.Rmd","Lecture03.Rmd"]
-exclude: ["graduate-program","undergraduate-program","Lecture01HW.Rmd","Lecture02HW.Rmd","Lecture02ext.md"]
+#exclude: ["graduate-program","undergraduate-program","Lecture01HW.Rmd","Lecture02HW.Rmd"]
+exclude: ["graduate-program","undergraduate-program"]
 navbar:
   right:
     - text: "首頁"
